# ida-codedump

./: .gitignore  CMakeLists.txt  Makefile  README.md  codedump.py
.github/workflows/: build.yml
docs/: IDAX_GAPS.md
harness/: cdump.cpp  cdump_bench.cpp
src/analysis/: ctree_analyzer.cpp  ctree_analyzer.h  function_ranker.cpp  function_ranker.h  ptn_emitter.cpp  ptn_emitter.h  register_analyzer.cpp  register_analyzer.h  subsystem_clusterer.cpp  subsystem_clusterer.h  type_collector.cpp  type_collector.h
src/common/: function_filter.cpp  function_filter.h  types.h  warn_off.h
src/graph/: graph_builder.cpp  graph_builder.h
src/output/: asm_writer.cpp  asm_writer.h  code_writer.cpp  code_writer.h  dot_writer.cpp  dot_writer.h  ptn_writer.cpp  ptn_writer.h
src/plugin/: codedump_plugin.cpp
src/transfer/: metadata.cpp  metadata.h  metadata_apply.cpp  metadata_apply.h  metadata_export.cpp  metadata_export.h
